CDB-523 #resolve - z-index in sql-block message in table view fixed

--- a/app/assets/stylesheets/table/table.css.scss
+++ b/app/assets/stylesheets/table/table.css.scss
@@ -85,7 +85,7 @@
           display: block;
           width: 100%;
           height: 37px;
-          z-index:0;
+          z-index:1;
 
           p {
             position: fixed;
